@@ -24,7 +24,10 @@
 #define UPTIME_FILE             "/proc/uptime"
 #define MEMINFO_FILE            "/proc/meminfo"
 #define PGCENTERRC_FILE         ".pgcenterrc"
-#define PG_RECOVERY_CONF_FILE   "recovery.conf"
+#define PG_CONF_FILE            "postgresql.conf"
+#define PG_HBA_FILE             "pg_hba.conf"
+#define PG_IDENT_FILE           "pg_ident.conf"
+#define PG_RECOVERY_FILE        "recovery.conf"
 
 /* 
  * GUC 
@@ -176,6 +179,9 @@ struct stats_mem_short_struct {
  * NB: Define SP_VALUE() to normalize to %;
  */
 #define SP_VALUE(m,n,p) (((double) ((n) - (m))) / (p) * 100)
+
+/* Macros used to determine array size */
+#define ARRAY_SIZE(a) (sizeof(a) / sizeof(a[0]))
 
 /* struct for column widths */
 struct colAttrs {
@@ -682,6 +688,7 @@ void write_pgcenterrc(WINDOW * window, struct screen_s * screens[], PGconn * con
 void show_config(WINDOW * window, PGconn * conn);
 void reload_conf(WINDOW * window, PGconn * conn);
 void edit_config(WINDOW * window, struct screen_s * screen, PGconn * conn, char * config_file_guc);
+void edit_config_menu(WINDOW * w_cmd, WINDOW * w_dba, struct screen_s * screen, PGconn * conn, bool *first_iter); 
 void signal_single_backend(WINDOW * window, struct screen_s *screen, PGconn * conn, bool do_terminate);
 void get_statemask(WINDOW * window, struct screen_s * screen);
 void set_statemask(WINDOW * window, struct screen_s * screen);
